=========================================================================
CHANGE LOG
=========================================================================

2008-07-24 Warren L. DeLano <warren@delsci.com>

	* fixed bug found in the previous implicit OR bug fix
	
	* fixed bug with unitialized memory in surfacing routines
	
2008-07-23 Warren L. DeLano <warren@delsci.com>

	* fixed bugs with transparency and interior color
	
	* nonbonded_tranpsparency now works per atom for nb_spheres
	
2008-07-22 Warren L. DeLano <warren@delsci.com>

	* fixed improper selection behavior for wizard with sequence view
	
2008-07-21 Warren L. DeLano <warren@delsci.com>

	* continued work on the builder
	
	* Added "Abort" and "Rebuild" buttons on the external GUI
	
2008-07-16 Warren L. DeLano <warren@delsci.com>

	* in the process of overhauling builder

	* added support for mengine as part of the "freemol" package
	
2008-07-08 Warren L. DeLano <warren@delsci.com>

	* fixed order-of-operations bug with implicit OR in selections
	
2008-07-06 Warren L. DeLano <warren@delsci.com>

	* fixed alignment/superposition crash bug
	
2008-06-20 Warren L. DeLano <warren@delsci.com>	

	* fixed problem launching browser under Mac OS X / X11

	* updated the MacPyMOL UI & fixed various glitches

	* added a Grid section to the Display menu

2008-06-17 Warren L. DeLano <warren@delsci.com>	

	* added support for multiple objects/selections in save dialog
	
2008-06-16 Warren L. DeLano <warren@delsci.com>	

	* fixed missing define when building via autotools

	* improved compatibility when building under OSX/X11 w/o Fink
	
2008-06-01 Warren L. DeLano <warren@delsci.com>	

	* session_cache_optimize setting

	* fixed cache optimize

	* added Ctrl-Fkey and Ctrl-PgDn/Up support inside Tcl/Tk
	
2008-05-31 Warren L. DeLano <warren@delsci.com>	

	* updated help menu

	* mouse_grid setting
	
2008-05-28 Warren L. DeLano <warren@delsci.com>	

	* added mesh_cutoff and related mesh settings 
